examples/bad/declare-wrong-type.elina
fn main(): void {
  var x: int = "Hello";
}